# agent-message-validator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_message_validator/: __init__.py  core.py
src/agent_message_validator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_agent_message_validator.py
