[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-message-validator"
version = "0.1.0"
description = "Validate Anthropic message lists before API calls — catches consecutive roles, unmatched tool_use/result, empty content. Zero dependencies."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["agents", "llm", "anthropic", "validation", "messages"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agent-message-validator"

[tool.setuptools.packages.find]
where = ["src"]
